BTWCT-1151: Fix Alignment of Inline Search Icon => CSS adjustments

--- a/waters-aem-frontend/src/styles/filters.scss
+++ b/waters-aem-frontend/src/styles/filters.scss
@@ -154,7 +154,7 @@
             svg {
                 z-index: 1;
                 position: absolute;
-                top: 9px;
+                top: 13px;
                 right: 10px;
                 width: 25px;
                 height: 25px;
